testdata/baselines/reference/submodule/conformance/varRequireFromTypescript.errors.txt
use.js(1,10): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
use.js(10,12): error TS2503: Cannot find namespace 'ex'.
use.js(11,12): error TS2503: Cannot find namespace 'ex'.


==== use.js (3 errors) ====
    var ex = require('./ex')
             ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Greatest} greatest
               ~~
!!! error TS2503: Cannot find namespace 'ex'.
     * @param {ex.Crunch} wrap
               ~~
!!! error TS2503: Cannot find namespace 'ex'.
     */
    function f(greatest, wrap) {
        greatest.day
        wrap.n
    }
    
==== ex.d.ts (0 errors) ====
    export type Greatest = { day: 1 }
    export class Crunch {
        n: number
        m(): number
        constructor(n: number)
    }
    